syntax = "proto3";
package org.epay.protobuf.http;
message LoginC{
	string hOpCode=1;
	string token=2;
}
message LoginS{
	string hOpCode=1;
}
